--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
   <script src="./js/theme.js"></script> 
 
   
+  <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-9472449-7', 'owensd.io/proteus');
+      ga('send', 'pageview');
+  </script>
+  
 </head>
 
 <body class="wy-body-for-nav" role="document">
@@ -148,5 +158,5 @@
 
 <!--
 MkDocs version : 0.14.0
-Build Date UTC : 2015-09-11 18:30:28.321937
+Build Date UTC : 2015-09-11 20:46:21.402100
 -->
